--- a/trainers.html
+++ b/trainers.html
@@ -10,7 +10,9 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">Pokedex</div>
+            <div class="nav-logo">
+                <img src="assets/img/Pokédex_logo.png" alt="nav-logo">
+            </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Pokemons</a></li>
                 <li class="nav-item"><a href="trainers.html" class="nav-link">Entrenadores</a></li>
@@ -107,7 +109,7 @@
                 <div class="trainer-info">
                     <h3 class="trainer-name">Iris</h3>
                     <p class="trainer-region">Región: Teselia</p>
-                    <p class="trainer-badges">Medallas: 8</p>
+                    <p class="trscreenainer-badges">Medallas: 8</p>
                     <span class="trainer-status status-champion">Campeona</span>
                 </div>
             </div>
