--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
 <body>
     <nav class="navbar">
         <div class="nav-container">
-            <div class="nav-logo">Pokedex</div>
-            <img src="img/pokedex.png" alt="">
+            <div class="nav-logo">
+            <img src="assets/img/Pokédex_logo.png" alt="pokedex">
+            </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Pokemons</a></li>
                 <li class="nav-item"><a href="trainers.html" class="nav-link">Entrenadores</a></li>
