--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <nav class="navbar">
         <div class="nav-container">
             <div class="nav-logo">
-            <img src="assets/img/Pokédex_logo.png" alt="pokedex">
+            <img src="assets/css/img/Sin título.png" alt="pokedex">
             </div>
             <ul class="nav-menu">
                 <li class="nav-item"><a href="index.html" class="nav-link">Pokemons</a></li>
